--- a/blt/project.yml
+++ b/blt/project.yml
@@ -3,7 +3,7 @@ project:
   prefix: BLT
   human_name: 'Open OSU'
   profile:
-    name: lightning
+    name: osu
   local:
     protocol: http
     hostname: 'local.${project.machine_name}.com'
