--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,9 @@
         "drupal/cog": "^1.0.0",
         "drupal/core": "^8.0",
         "drupal/features": "^3.0.0",
+        "drupal/image_widget_crop": "^1.4",
         "drupal/memcache": "2.x-dev",
+        "drupal/metatag": "^1.0",
         "drupal/seckit": "^1.0.0-alpha2",
         "drupal/security_review": "*",
         "drupal/shield": "^1.0.0",
