adds blocks to install profile and enables news

--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "drupal/image_widget_crop": "^1.4",
         "drupal/memcache": "2.x-dev",
         "drupal/metatag": "^1.0",
+        "drupal/paragraphs": "^1.1",
         "drupal/seckit": "^1.0.0-alpha2",
         "drupal/security_review": "*",
         "drupal/shield": "^1.0.0",
