--- a/docroot/modules/custom/osu_content/config/install/crop.type.widescreen.yml
+++ b/docroot/modules/custom/osu_content/config/install/crop.type.widescreen.yml
@@ -1,7 +1,7 @@
 langcode: en
 status: true
 dependencies: {  }
-label: Widescreen
+label: 'Widescreen (16:9)'
 id: widescreen
 description: 'A cropping ratio modeled after modern tvs.'
 aspect_ratio: '16:9'
