--- a/docroot/modules/custom/osu_content/config/install/field.storage.node.image_wide.yml
+++ b/docroot/modules/custom/osu_content/config/install/field.storage.node.image_wide.yml
@@ -5,8 +5,8 @@ dependencies:
     - file
     - image
     - node
-id: node.image_standard
-field_name: image_standard
+id: node.image_wide
+field_name: image_wide
 entity_type: node
 type: image
 settings:
