--- a/docroot/modules/custom/osu_content/modules/osu_news/config/install/core.entity_form_display.node.osu_news.default.yml
+++ b/docroot/modules/custom/osu_content/modules/osu_news/config/install/core.entity_form_display.node.osu_news.default.yml
@@ -3,14 +3,13 @@ status: true
 dependencies:
   config:
     - field.field.node.osu_news.body
-    - field.field.node.osu_news.image_banner
     - field.field.node.osu_news.image_square
-    - field.field.node.osu_news.image_standard
+    - field.field.node.osu_news.image_wide
     - field.field.node.osu_news.teaser
     - image.style.thumbnail
     - node.type.osu_news
   module:
-    - image
+    - image_widget_crop
     - path
     - text
 id: node.osu_news.default
@@ -20,7 +19,7 @@ mode: default
 content:
   body:
     type: text_textarea_with_summary
-    weight: 31
+    weight: 2
     settings:
       rows: 9
       summary_rows: 3
@@ -28,49 +27,57 @@ content:
     third_party_settings: {  }
   created:
     type: datetime_timestamp
-    weight: 10
+    weight: 6
     settings: {  }
     third_party_settings: {  }
-  image_banner:
-    weight: 34
-    settings:
-      progress_indicator: throbber
-      preview_image_style: thumbnail
-    third_party_settings: {  }
-    type: image_image
   image_square:
-    weight: 35
+    weight: 3
     settings:
-      progress_indicator: throbber
+      show_default_crop: true
+      warn_multiple_usages: true
       preview_image_style: thumbnail
+      crop_preview_image_style: crop_thumbnail
+      progress_indicator: throbber
+      crop_list:
+        - square
+        - standard
+      show_crop_area: false
     third_party_settings: {  }
-    type: image_image
-  image_standard:
-    weight: 33
+    type: image_widget_crop
+  image_wide:
+    weight: 4
     settings:
-      progress_indicator: throbber
+      show_default_crop: true
+      warn_multiple_usages: true
       preview_image_style: thumbnail
+      crop_preview_image_style: crop_thumbnail
+      progress_indicator: throbber
+      crop_list:
+        - banner
+        - card
+        - widescreen
+      show_crop_area: false
     third_party_settings: {  }
-    type: image_image
+    type: image_widget_crop
   path:
     type: path
-    weight: 30
+    weight: 9
     settings: {  }
     third_party_settings: {  }
   promote:
     type: boolean_checkbox
     settings:
       display_label: true
-    weight: 15
+    weight: 7
     third_party_settings: {  }
   sticky:
     type: boolean_checkbox
     settings:
       display_label: true
-    weight: 16
+    weight: 8
     third_party_settings: {  }
   teaser:
-    weight: 32
+    weight: 1
     settings:
       size: 60
       placeholder: ''
@@ -78,7 +85,7 @@ content:
     type: string_textfield
   title:
     type: string_textfield
-    weight: -5
+    weight: 0
     settings:
       size: 60
       placeholder: ''
