--- a/docroot/modules/custom/osu_content/modules/osu_news/config/install/core.entity_view_display.node.osu_news.teaser.yml
+++ b/docroot/modules/custom/osu_content/modules/osu_news/config/install/core.entity_view_display.node.osu_news.teaser.yml
@@ -4,9 +4,8 @@ dependencies:
   config:
     - core.entity_view_mode.node.teaser
     - field.field.node.osu_news.body
-    - field.field.node.osu_news.image_banner
     - field.field.node.osu_news.image_square
-    - field.field.node.osu_news.image_standard
+    - field.field.node.osu_news.image_wide
     - field.field.node.osu_news.teaser
     - node.type.osu_news
   module:
@@ -27,7 +26,6 @@ content:
   links:
     weight: 100
 hidden:
-  image_banner: true
   image_square: true
-  image_standard: true
+  image_wide: true
   teaser: true
